python-defaults (2.6.6-6) UNRELEASED; urgency=low

  * Make the error message about missing extension more clear
    (and more verbose in --verbose mode)
  * dh_python2: install files listed in debian/package.pyinstall file
    as public modules for all requested Python versions (use dh_install's
    package.install files for private modules)
  * pycompile: `pycompile $DESTDIR/usr/lib/python*` will recognize public
    site-packages directories and use the right interpreter instead of raising
    KeyError

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 21 Nov 2010 23:49:32 +0100

python-defaults (2.6.6-5) experimental; urgency=low

  * pycompile: if installed Python is requested via -V option, use it even if
    it's not in a list of supported Python versions (closes: 600529)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 17 Oct 2010 23:22:22 +0200

python-defaults (2.6.6-4) experimental; urgency=low

  * Add python2.7 as a supported Python version.
  * python-all{,-dev,-dbg}: Depend on the 2.7 packages.
  * Run the rtinstall script, when 2.7 became a supported version (2.6.6-4)
    and python2.7 is installed.

 -- Matthias Klose <doko@debian.org>  Sat, 16 Oct 2010 11:58:31 +0200

python-defaults (2.6.6-3) unstable; urgency=low

  * Upload to unstable
  * dh_python2: egg renaming fixed

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 22 Sep 2010 23:03:15 +0200

python-defaults (2.6.6-2) experimental; urgency=low

  [ Piotr Ożarowski ]
  * Add README.derivatives (source package)
  * dh_python2:
    - add dist_fallback file with a list of Python distribution name and
      Debian package name pairs (to be used as a fall back source for
      PyDist feature)
    - if dist_fallback and `dpkg -S` fails to find the right package name,
      fall back to package name recommended by Debian Python Policy (use
      debian/pydist-overrides file to override)
    - disable PyDist feature if dh_pydeb is in debian/rules
  * Use versioned interpreter name rather than "python" only in