@@ -1,0 +1,2 @@
+foo/spam.py 2.6
+foo/bar 2.7-
